updated background color, fixed issue with the drop d own areas not bringing down the content, stopped having the hole tab g o all the way up, and stopped them at the end of the previous tab, but  put in two spacer div's to fill in the space missing behind them so i t still looks the same.

--- a/src/style/TabStyles/dropTab.scss
+++ b/src/style/TabStyles/dropTab.scss
@@ -1,7 +1,7 @@
 .tab-base-stack-drop-container{
     display: grid;
     grid-template-columns: [main-s] 1fr [main-e];
-    grid-template-rows: [banner-s] 100px [banner-e] auto [tab1-s] minmax(48px, auto) [tab1-e] auto [tab2-s] minmax(48px, auto) [tab2-e] auto [tab3-s] minmax(48px, auto) [tab3-e] ;
+    grid-template-rows: [banner-s] 100px [banner-e tab1-s] minmax(48px, auto) [tab1-e tab2-s] minmax(48px, auto) [tab2-e tab3-s] minmax(48px, auto) [tab3-e] ;
     position: fixed;
     z-index: 5;
     width: 85%;
@@ -10,7 +10,7 @@
         box-shadow: 0px 15px 24px rgba(0, 0, 0, 0.2)  ; 
         -webkit-box-shadow: 0px 15px 24px rgba(0, 0, 0, 0.2)  ; 
         -moz-box-shadow: 0px 15px 24px rgba(0, 0, 0, 0.2)  ;
-        background-color: rgba($color: #164664, $alpha: 0.82);
+        background-color: rgba($color: #164664, $alpha: 0.57);
         z-index: 4;
         height: auto;
         border-radius: 0px 0px 50px 50px;
@@ -18,16 +18,36 @@
         grid-row: tab1-s/tab1-e;
         display: grid;
         grid-template-columns: [inner-s] 1fr [inner-e];
-        grid-template-rows: [content-s] minmax(0px, auto) [content-e] 0px [bottom-s] 48px [bottom-e];
+        grid-template-rows: [content-s] auto [content-e] 0px [bottom-s] 48px [bottom-e];
 
-        .drop-tab-Story__content {
+        .droptab-Story__content {
             grid-column: inner-s/inner-e;
             grid-row: content-s/content-e;
+            padding: 0px 20px 0px 20px;
+
+            .sub-tab-story-content {
+                padding: 15px;
+                background-color:  rgba($color: #131a21, $alpha: 0.6);
+                border-radius: 0px 0px 20px 20px;
+                font-family: 'Lora', serif;
+                color: #E9E9E9;
+                font-size: 15px
+            }
         }
 
-        .drop-tab-Story__bottom {
+        .droptab-Story__bottom {
             grid-column: inner-s/inner-e;
             grid-row: bottom-s/bottom-e;
+            color: #E9E9E9;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 25px;
+            padding-left: 3%;
+            padding-right: 3%;
+            z-index: 4;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 400pt;
         }
 
     }
@@ -36,29 +56,48 @@
         box-shadow: 0px 15px 24px rgba(0, 0, 0, 0.2)  ; 
         -webkit-box-shadow: 0px 15px 24px rgba(0, 0, 0, 0.2)  ; 
         -moz-box-shadow: 0px 15px 24px rgba(0, 0, 0, 0.2)  ;
-        background-color: rgba($color: #164664, $alpha: 0.62);
+        background-color: rgba($color: #164664, $alpha: 0.47);
         z-index: 3;
         height: auto;
         border-radius: 0px 0px 50px 50px;;
         grid-column: main-s/main-e;
-        grid-row: tab1-s/tab2-e;
+        grid-row: tab2-s/tab2-e;
         display: grid;
         grid-template-columns: [inner-s] 1fr [inner-e];
-        grid-template-rows: [content-s] minmax(0px, auto) [content-e] 0px [bottom-s] 48px [bottom-e];
+        grid-template-rows: [content-s] auto [content-e] 0px [bottom-s] 48px [bottom-e];
 
-        .drop-tab-Images__content {
-            padding-top: 50px;
+        .droptab-Images__content {
             grid-column: inner-s/inner-e;
             grid-row: content-s/content-e;
+            padding: 0px 3% 0px 3%;
+            
 
             .image-gallery-tab-content {
-                padding-top: 50px;
+                display: flex;
+                padding: 0px 25px 0px 25px;
+                justify-content: space-around;
+                padding: 15px;
+                background-color:  rgba($color: #131a21, $alpha: 0.4);
+                border-radius: 0px 0px 20px 20px;
+                font-family: 'Lora', serif;
+                color: #E9E9E9;
+                font-size: 15px;
             }
         }
 
-        .drop-tab-Images__bottom {
+        .droptab-Images__bottom {
             grid-column: inner-s/inner-e;
             grid-row: bottom-s/bottom-e;
+            color: #E9E9E9;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 25px;
+            padding-left: 3%;
+            padding-right: 3%;
+            z-index: 3;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 400pt;
         }
     }
 
@@ -66,12 +105,12 @@
         box-shadow: 0px 15px 24px rgba(0, 0, 0, 0.2)  ; 
         -webkit-box-shadow: 0px 15px 24px rgba(0, 0, 0, 0.2)  ; 
         -moz-box-shadow: 0px 15px 24px rgba(0, 0, 0, 0.2)  ;
-        background-color: rgba($color: #164664, $alpha: 0.42);
+        background-color: rgba($color: #164664, $alpha: 0.39);
         z-index: 2;
         height: auto;
         border-radius: 0px 0px 50px 50px;;
         grid-column: main-s/main-e;
-        grid-row: tab1-s/tab3-e;
+        grid-row: tab3-s/tab3-e;
         display: grid;
         grid-template-columns: [inner-s] 1fr [inner-e];
         grid-template-rows: [content-s] minmax(0px, auto) [content-e] 0px [bottom-s] 48px [bottom-e];
@@ -81,10 +120,34 @@
             grid-row: content-s/content-e;
         }
 
-        .drop-tab-Comments__bottom {
+        .droptab-Comments__bottom {
             grid-column: inner-s/inner-e;
             grid-row: bottom-s/bottom-e;
+            color: #E9E9E9;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 25px;
+            padding-left: 3%;
+            padding-right: 3%;
+            z-index: 2;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 400pt;
         }
+    }
+
+    .tab-spacer-1 {
+        grid-column: main-s/main-e;
+        grid-row: tab1-s/tab1-e;
+        background-color: rgba($color: #164664, $alpha: 0.67);
+        z-index: 1;
+    }
+
+    .tab-spacer-2 {
+        grid-column: main-s/main-e;
+        grid-row: tab2-s/tab2-e;
+        background-color: rgba($color: #164664, $alpha: 0.35);
+        z-index: 1;
     }
     
 }
