--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,7 +19,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
     -webkit-tap-highlight-color: transparent;
-    background-color: #0D2635;
+    background-color: #131a21;
 }
 
 .app {
